--- a/fracment/app/src/main/AndroidManifest.xml
+++ b/fracment/app/src/main/AndroidManifest.xml
@@ -1,12 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.user.fracment">
-
-    <!-- To auto-complete the email text field in the login form with the user's emails -->
-    <uses-permission android:name="android.permission.GET_ACCOUNTS" />
-    <uses-permission android:name="android.permission.READ_PROFILE" />
-    <uses-permission android:name="android.permission.READ_CONTACTS" />
-
+    package="com.example.vankhanhpr.tabhost">
+    <uses-feature android:name="android.hardware.camera"
+        android:required="true" />
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -14,24 +10,15 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity
-            android:name=".thefirst_1kt"
-            android:label="flagment"
-            android:theme="@style/AppTheme.NoActionBar">
+        <activity android:name=".WelCome">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".main"></activity>
-        <activity android:name=".loginkl"/>
-        <activity android:name=".thefirst_4kt"/>
-        <activity android:name=".thefirst_2kt"/>
-        <activity android:name=".thefirst_3kt"/>
+        <activity android:name="com.example.user.fracment.loginkl"/>
+        <activity android:name=".MainActivity"/>
+        <activity android:name=".Before_Login"/>
     </application>
-
-
-
 
 </manifest>
